--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-scripts": "4.0.3",
     "react-stripe-checkout": "^2.6.3",
     "react-table": "^7.7.0",
+    "react-toastify": "^8.1.0",
     "redux": "^4.1.2",
     "redux-persist": "^6.0.0",
     "styled-components": "^5.3.3",
